--- a/.gitignore
+++ b/.gitignore
@@ -4,31 +4,21 @@ __pycache__/
 *$py.class
 *.so
 .Python
+.env
+.venv
 env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+venv/
+ENV/
+env.bak/
+venv.bak/
+.python-version
 
-# Conda
-.conda/
-
-# IDEs
-.vscode/
+# IDE
 .idea/
+.vscode/
 *.swp
 *.swo
 
-# OS specific
+# OS
 .DS_Store
 Thumbs.db 
