--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pygame>=2.5.0
 PyOpenGL>=3.1.7
 numpy>=1.24.0
-google-generativeai==0.3.2
-Pillow==10.2.0
+google-generativeai>=0.3.0
+Pillow>=10.0.0
+python-dotenv>=1.0.0
